# CIA-SIE-PURE

./: .cursorrules  .env.example  .gitignore  .remediation-baseline  .remediation-env  CURSOR_AUDIT_INSTRUCTIONS.md  FRONTEND_BACKEND_INTEGRATION_VERIFICATION.md  FRONTEND_GAP_ANALYSIS.md  FRONTEND_INTEGRITY_CLASSIFICATION.md  README.md  SESSION_RESUME_INSTRUCTIONS.md  TESTING.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  sync-backup.yml
00_MASTER_DOCUMENTS/: BACKEND_RECONSTRUCTION_BLUEPRINT.md  MASTER_FOUNDATIONAL_DOCUMENT.md  MASTER_SYNTHESIS_CIA-SIE_ECOSYSTEM.md
01_GOLD_STANDARD/COMMAND_PROTOCOL/: 00_GENESIS.md  LIFECYCLE_DEFINITION.md
01_GOLD_STANDARD/CORE_KERNEL/: FIRST_PRINCIPLES.md  MODULARITY_DOCTRINE.md  VERIFICATION_DOCTRINE.md
01_GOLD_STANDARD/Gold Standard Visual Map & Narrative_CLAUDE/: GOLD_STANDARD_VISUAL_MAP.html
01_GOLD_STANDARD/Gold Standard Visual Map & Narrative_CLAUDE_ver ii/: GOLD_STANDARD_COMPLETE_REFERENCE_v2.html  GOLD_STANDARD_DATA.json
01_GOLD_STANDARD/INTEGRATION_LAYER/: CROSS_REFERENCE_MATRIX.md  MODULE_REGISTRY.md  VERSION_MANIFEST.md
01_GOLD_STANDARD/REPORTS/: EXECUTION_SUMMARY.md  PROVISIONAL_DECISIONS_REPORT.md  SOURCE_CONSOLIDATION_REPORT.md
02_CRITICAL_DOCUMENTS/AI_HANDOFF/: AUTONOMOUS_HANDOFF_COMPREHENSIVE.md  HANDOFF_00_README.md  HANDOFF_02_API_ENDPOINTS.md  HANDOFF_03_CONSTITUTIONAL_RULES.md  HANDOFF_05_COMPONENT_REQUIREMENTS.md  HANDOFF_06_CSS_DESIGN_SYSTEM.md  HANDOFF_07_BUSINESS_LOGIC.md
02_CRITICAL_DOCUMENTS/ARCHITECTURE/: LAUNCHER_SYSTEM_ARCHITECTURE.md
03_COWORK_PACKAGES/: 00_MANIFEST.md  01_BACKEND_RECONSTRUCTION_BRIEF.md  02_FORENSIC_AUDIT_CHECKLIST.md  03_FLOWCHART_SYNTHESIS_GUIDE.md  04_COWORK_SESSION_OPENING_PROMPT.md  05_GOLD_STANDARD_DATA.json  06_CLAUDE_CODE_EXECUTION_COMMANDS.md  API_ENDPOINT_REGISTRY.md  CONSTITUTIONAL_COMPLIANCE_MATRIX.md  FORENSIC_AUDIT_INVENTORY.md  GAP_ANALYSIS_REPORT.md
03_DESIGN/: CIA-SIE_FRONTEND_ALIGNMENT_RECONCILIATION_v1.0.md  CIA-SIE_REMEDIATION_PROTOCOL_v3.0.md
03_DESIGN/Frontend_Design/: FRONTEND_DESIGN_CONCEPT_v1.0.md
04_DOCUMENTATION/: MASTER_TODO_TRACKER.md  PROJECT_STATUS_TREE.md  PROJECT_TREE_COMPLETE.md  USER_MANUAL.md  docs_README.md
05_ARCHITECTURE/Mercury/: AUTONOMOUS_ROCKET_ENGINE_PLAN.md  README.md  pyproject.toml  requirements.txt  start-mercury.command
05_ARCHITECTURE/Mercury/documentation/: 01_GENESIS.md  02_CONSTITUTION.md  03_ARCHITECTURE.md  04_SPECIFICATION.md  05_INTEGRATION_VERIFICATION.md  06_RECONCILIATION.md  07_CERTIFICATION.md  08_OPERATION.md  09_MISSION_CRITICAL_STANDARDS.md  10_MISSION_CRITICAL_IMPLEMENTATION.md  11_DEPLOYMENT_CERTIFICATION.md  12_LAUNCH_READINESS_REPORT.md
05_ARCHITECTURE/Mercury/documentation/templates/: POSTMORTEM_TEMPLATE.md
05_ARCHITECTURE/Mercury/scripts/: start_mercury.sh  verify_deployment.py
05_ARCHITECTURE/Mercury/src/mercury/: __init__.py  main.py
05_ARCHITECTURE/Mercury/src/mercury/ai/: __init__.py  engine.py  intent.py  prompts.py
05_ARCHITECTURE/Mercury/src/mercury/api/: __init__.py  app.py
05_ARCHITECTURE/Mercury/src/mercury/attachments/: __init__.py  manager.py  parser.py
05_ARCHITECTURE/Mercury/src/mercury/chat/: __init__.py  conversation.py  engine.py
05_ARCHITECTURE/Mercury/src/mercury/core/: __init__.py  alerting.py  config.py  errors.py  exceptions.py  features.py  health.py  logging.py  metrics.py  monitor.py  persistence.py  rate_limiter.py  resilience.py  security.py  shutdown.py  startup.py  validation.py
05_ARCHITECTURE/Mercury/src/mercury/interface/: __init__.py  repl.py
05_ARCHITECTURE/Mercury/src/mercury/kite/: __init__.py  adapter.py  models.py  oauth_manager.py
05_ARCHITECTURE/Mercury/tests/: __init__.py  test_api.py  test_chat_engine.py  test_conversation.py  test_errors.py  test_health.py  test_integration.py  test_intent.py  test_metrics.py  test_monitor.py  test_oauth_manager.py  test_persistence.py  test_rate_limiter.py  test_resilience.py  test_security.py  test_shutdown.py  test_startup.py
06_SOURCE_CODE/: alembic.ini
07_TESTING/: execute_all_tests_autonomous.py  run_comprehensive_tests.py  run_quick_tests.py
10_UTILITIES/: extract_chat_history.py  generate_chronicle.py  seed_sample_data.py
AI_HANDOFF/: HANDOFF_01_DESIGN_SPECIFICATION.md  HANDOFF_04_TECHNICAL_STANDARDS.md  HANDOFF_08_IMPLEMENTATION_STATUS.md
alembic/: env.py  script.py.mako
docs/: CIA-SIE_ARCHITECTURE_FLOWCHARTS.md  CIA-SIE_PROJECT_MATURITY_AUDIT.html  CIA-SIE_PROJECT_MATURITY_AUDIT.md
frontend/: .bundle-baseline.txt  TEST_EXECUTION_CHECKLIST.md  index.html  jest.config.cjs  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
governance/: ADAPTER_FINANCIAL_SERVICES.md  CIA-SIE_AUDIT_CONFIGURATION.md  CURSOR_ARCHITECTURE_GENERATION_DIRECTIVE.md  CURSOR_DEVELOPMENT_GOVERNANCE.md  CURSOR_REMEDIATION_INSTRUCTIONS.md  CURSOR_VALIDATION_INSTRUCTIONS.md  V0_COMPONENT_PROMPTS.md
handoff/: BACKEND_ARCHITECTURAL_FLOWCHART.md  DEVELOPMENT_SESSION_2026-01-03.md  PHASE_1_REPOSITORY_STRUCTURE_AUDIT.md  PHASE_2_BACKEND_CODE_AUDIT.md  PHASE_3_FRONTEND_CODE_AUDIT.md  PHASE_4_DATA_LAYER_AUDIT.md  PHASE_5_API_SPECIFICATION_AUDIT.md  PHASE_6_TEST_COVERAGE_AUDIT.md  PHASE_7_DOCUMENTATION_SYNC_AUDIT.md  PHASE_8_SECURITY_CONSTITUTIONAL_AUDIT.md  PHASE_9A_REQUIREMENTS_TRACEABILITY_MATRIX.md  PHASE_9B_COMPLIANCE_SCORECARD.md  PHASE_9C_GAP_ANALYSIS.md  PHASE_9D_REMEDIATION_ROADMAP.md  PHASE_9E_AUDIT_CERTIFICATION.md  VALIDATION_EXECUTION_LOG.md
prompts/: PROJECT_CONFIGURATION.md
tests/: __init__.py  conftest.py
(+502 files in other folders)
